<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MaxiHack</string>
    <string name="wifi">WiFi</string>
    <string name="ble">BLE</string>
    <string name="rf">RF</string>
    <string name="rfid">RFID</string>
    <string name="ir">IR</string>
    <string name="fm">FM</string>
    <string name="nrf24">NRF24</string>
    <string name="scripts">Scripts</string>
    <string name="others">Others</string>
    <string name="clock">Clock</string>
    <string name="config">Config</string>
    <string name="connect">Connect</string>
    <string name="beacon_spam">Beacon Spam</string>
    <string name="target_attack">Target Atk</string>
    <string name="deauth_flood">Deauth Flood</string>
    <string name="wardriving">Wardriving</string>
    <string name="evil_portal">Evil Portal</string>
    <string name="scan_hosts">Scan Hosts</string>
    <string name="arp_spoofing">ARP Spoofing</string>
    <string name="ble_scan">BLE Scan</string>
    <string name="bad_ble">Bad BLE</string>
    <string name="ios_spam">iOS Spam</string>
    <string name="windows_spam">Windows Spam</string>
    <string name="samsung_spam">Samsung Spam</string>
    <string name="android_spam">Android Spam</string>
    <string name="spam_all">Spam All</string>
    <string name="rf_scan">Scan / Copy</string>
    <string name="rf_spectrum">Spectrum</string>
    <string name="rf_jammer">Jammer</string>
    <string name="rf_replay">Replay</string>
    <string name="rfid_read">Read Tag</string>
    <string name="rfid_clone">Clone Tag</string>
    <string name="rfid_write_ndef">Write NDEF</string>
    <string name="rfid_emulate">Emulate Tag</string>
    <string name="ir_tv_b_gone">TV-B-Gone</string>
    <string name="ir_receiver">IR Receiver</string>
    <string name="ir_custom">Custom IR</string>
    <string name="fm_broadcast">Broadcast</string>
    <string name="nrf24_jammer">NRF24 Jammer</string>
    <string name="nrf24_spectrum">2.4G Spectrum</string>
    <string name="js_interpreter">JS Interpreter</string>
    <string name="qrcodes">QR Codes</string>
    <string name="bad_usb">BadUSB</string>
    <string name="sd_card_mngr">SD Card Mngr</string>
    <string name="webui">WebUI</string>
    <string name="led_control">LED Control</string>
    <string name="rtc">RTC</string>
    <string name="ntp_time">NTP Time Sync</string>
    <string name="brightness">Brightness</string>
    <string name="dim_time">Dim Time</string>
    <string name="orientation">Orientation</string>
    <string name="ui_color">UI Color</string>
    <string name="restart">Restart</string>
    <string name="start_attack">Start Attack</string>
    <string name="stop_attack">Stop Attack</string>
    <string name="scanning">Scanning…</string>
    <string name="running">Running…</string>
    <string name="stopped">Stopped</string>
</resources>
</write_to_file>